Move PLIB netSocket into SimGear, as simgear::Socket, and update the wrapper classes.

--- a/projects/VC90/SimGear.vcproj
+++ b/projects/VC90/SimGear.vcproj
@@ -495,6 +495,14 @@
 				RelativePath="..\..\simgear\io\sg_socket_udp.hxx"
 				>
 			</File>
+			<File
+				RelativePath="..\..\simgear\io\raw_socket.cxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\simgear\io\raw_socket.hxx"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Lib_sgmagvar"
