--- a/simgear/io/Makefile.am
+++ b/simgear/io/Makefile.am
@@ -9,7 +9,8 @@ include_HEADERS = \
 	sg_file.hxx \
 	sg_serial.hxx \
 	sg_socket.hxx \
-	sg_socket_udp.hxx
+	sg_socket_udp.hxx \
+	raw_socket.hxx \
 
 libsgio_a_SOURCES = \
 	iochannel.cxx \
@@ -18,7 +19,8 @@ libsgio_a_SOURCES = \
 	sg_file.cxx \
 	sg_serial.cxx \
 	sg_socket.cxx \
-	sg_socket_udp.cxx 
+	sg_socket_udp.cxx \
+	raw_socket.cxx
 
 INCLUDES = -I$(top_srcdir)
 
@@ -26,52 +28,34 @@ noinst_PROGRAMS = decode_binobj socktest lowtest tcp_server tcp_client
 
 tcp_server_SOURCES = tcp_server.cxx
 
-if HAVE_FRAMEWORK_PLIB
-tcp_server_LDFLAGS = $(plib_FRAMEWORK)
-else
-tcp_server_PLIB_LIBS = -lplibnet -lplibul
-endif
-
 tcp_server_LDADD = \
 	libsgio.a \
 	$(top_builddir)/simgear/debug/libsgdebug.a \
 	$(top_builddir)/simgear/bucket/libsgbucket.a \
 	$(top_builddir)/simgear/misc/libsgmisc.a \
-	$(tcp_server_PLIB_LIBS) -lz \
+	-lz \
 	$(network_LIBS) \
 	$(base_LIBS)
 
 tcp_client_SOURCES = tcp_client.cxx
-
-if HAVE_FRAMEWORK_PLIB
-tcp_client_LDFLAGS = $(plib_FRAMEWORK)
-else
-tcp_client_PLIB_LIBS = -lplibnet -lplibul
-endif
 
 tcp_client_LDADD = \
 	libsgio.a \
 	$(top_builddir)/simgear/debug/libsgdebug.a \
 	$(top_builddir)/simgear/bucket/libsgbucket.a \
 	$(top_builddir)/simgear/misc/libsgmisc.a \
-	$(tcp_client_PLIB_LIBS) -lz \
+	-lz \
 	$(network_LIBS) \
 	$(base_LIBS)
 
 socktest_SOURCES = socktest.cxx
-
-if HAVE_FRAMEWORK_PLIB
-socktest_LDFLAGS = $(plib_FRAMEWORK)
-else
-socktest_PLIB_LIBS = -lplibnet -lplibul
-endif
 
 socktest_LDADD = \
 	libsgio.a \
 	$(top_builddir)/simgear/debug/libsgdebug.a \
 	$(top_builddir)/simgear/bucket/libsgbucket.a \
 	$(top_builddir)/simgear/misc/libsgmisc.a \
-        $(socktest_PLIB_LIBS) -lz \
+    -lz \
 	$(network_LIBS) \
 	$(base_LIBS) 
 
