--- a/simgear/io/Makefile.am
+++ b/simgear/io/Makefile.am
@@ -30,6 +30,7 @@ tcp_server_SOURCES = tcp_server.cxx
 
 tcp_server_LDADD = \
 	libsgio.a \
+	$(top_builddir)/simgear/structure/libsgstructure.a \	
 	$(top_builddir)/simgear/debug/libsgdebug.a \
 	$(top_builddir)/simgear/bucket/libsgbucket.a \
 	$(top_builddir)/simgear/misc/libsgmisc.a \
@@ -41,6 +42,7 @@ tcp_client_SOURCES = tcp_client.cxx
 
 tcp_client_LDADD = \
 	libsgio.a \
+	$(top_builddir)/simgear/structure/libsgstructure.a \
 	$(top_builddir)/simgear/debug/libsgdebug.a \
 	$(top_builddir)/simgear/bucket/libsgbucket.a \
 	$(top_builddir)/simgear/misc/libsgmisc.a \
@@ -52,6 +54,7 @@ socktest_SOURCES = socktest.cxx
 
 socktest_LDADD = \
 	libsgio.a \
+	$(top_builddir)/simgear/structure/libsgstructure.a \
 	$(top_builddir)/simgear/debug/libsgdebug.a \
 	$(top_builddir)/simgear/bucket/libsgbucket.a \
 	$(top_builddir)/simgear/misc/libsgmisc.a \
@@ -63,6 +66,7 @@ lowtest_SOURCES = lowtest.cxx
 
 lowtest_LDADD = \
 	libsgio.a \
+	$(top_builddir)/simgear/structure/libsgstructure.a \
 	$(top_builddir)/simgear/debug/libsgdebug.a \
 	$(top_builddir)/simgear/bucket/libsgbucket.a \
 	$(top_builddir)/simgear/misc/libsgmisc.a \
