--- a/projects/VC100/SimGear.vcxproj
+++ b/projects/VC100/SimGear.vcxproj
@@ -220,6 +220,8 @@
     <ClCompile Include="..\..\simgear\misc\tabbed_values.cxx" />
     <ClCompile Include="..\..\simgear\misc\texcoord.cxx" />
     <ClCompile Include="..\..\simgear\misc\zfstream.cxx" />
+    <ClCompile Include="..\..\simgear\misc\ResourceManager.cxx" />
+    <ClCompile Include="..\..\simgear\misc\ResourceManager.hxx" />
     <ClCompile Include="..\..\simgear\route\route.cxx" />
     <ClCompile Include="..\..\simgear\route\waypoint.cxx" />
     <ClCompile Include="..\..\simgear\screen\extensions.cxx" />
