--- a/projects/VC100/SimGear.vcxproj
+++ b/projects/VC100/SimGear.vcxproj
@@ -208,6 +208,7 @@
     <ClCompile Include="..\..\simgear\magvar\magvar.cxx" />
     <ClCompile Include="..\..\simgear\math\interpolater.cxx" />
     <ClCompile Include="..\..\simgear\math\leastsqs.cxx" />
+    <ClCompile Include="..\..\simgear\math\project.cxx" />
     <ClCompile Include="..\..\simgear\math\sg_random.c" />
     <ClCompile Include="..\..\simgear\math\SGGeod.cxx" />
     <ClCompile Include="..\..\simgear\math\SGGeodesy.cxx" />
@@ -401,6 +402,7 @@
     <ClInclude Include="..\..\simgear\math\localconsts.hxx" />
     <ClInclude Include="..\..\simgear\math\point3d.hxx" />
     <ClInclude Include="..\..\simgear\math\polar3d.hxx" />
+    <ClInclude Include="..\..\simgear\math\project.hxx" />
     <ClInclude Include="..\..\simgear\math\sg_geodesy.hxx" />
     <ClInclude Include="..\..\simgear\math\sg_random.h" />
     <ClInclude Include="..\..\simgear\math\sg_types.hxx" />
