Add mipmap control in the effect file

--- a/projects/VC90/SimGear.vcproj
+++ b/projects/VC90/SimGear.vcproj
@@ -1262,6 +1262,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\simgear\scene\material\mipmap.cxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\simgear\scene\material\mipmap.hxx"
+				>
+			</File>
+			<File
 				RelativePath="..\..\simgear\scene\material\Noise.cxx"
 				>
 			</File>
