Add platform defines to SimGear, and a replacement for ulSleep functions.

--- a/projects/VC90/SimGear.vcproj
+++ b/projects/VC90/SimGear.vcproj
@@ -642,6 +642,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\simgear\misc\sg_sleep.cxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\simgear\misc\sg_sleep.hxx"
+				>
+			</File>
+			<File
 				RelativePath="..\..\simgear\misc\sg_path.cxx"
 				>
 			</File>
