--- a/simgear/misc/Makefile.am
+++ b/simgear/misc/Makefile.am
@@ -14,7 +14,8 @@ include_HEADERS = \
 	stdint.hxx \
 	PathOptions.hxx \
 	sg_dir.hxx \
-	ResourceManager.hxx 
+	ResourceManager.hxx \
+	sg_sleep.hxx
 
 libsgmisc_a_SOURCES = \
 	sg_path.cxx \
@@ -26,7 +27,8 @@ libsgmisc_a_SOURCES = \
 	interpolator.cxx \
 	PathOptions.cxx \
 	sg_dir.cxx \
-	ResourceManager.cxx 
+	ResourceManager.cxx \
+	sg_sleep.cxx
 
 #noinst_PROGRAMS = tabbed_value_test swap_test
 
