add ConditionNode scenegraph node
This class directs its scenegraph traversal by evaluating a condition
and doesn't rely on an update callback.

--- a/simgear/scene/model/Makefile.am
+++ b/simgear/scene/model/Makefile.am
@@ -13,6 +13,7 @@ include_HEADERS = \
 	persparam.hxx \
 	placement.hxx \
 	CheckSceneryVisitor.hxx \
+	ConditionNode.hxx \
 	SGClipGroup.hxx \
 	SGInteractionAnimation.hxx \
 	SGMaterialAnimation.hxx \
@@ -36,6 +37,7 @@ libsgmodel_a_SOURCES = \
 	placement.cxx \
 	shadanim.cxx \
 	CheckSceneryVisitor.cxx \
+	ConditionNode.cxx \
 	SGClipGroup.cxx \
 	SGInteractionAnimation.cxx \
 	SGMaterialAnimation.cxx \
