Update Vs2010 projects

--- a/projects/VC100/SimGear.vcxproj
+++ b/projects/VC100/SimGear.vcxproj
@@ -228,6 +228,7 @@
     <ClCompile Include="..\..\simgear\route\route.cxx" />
     <ClCompile Include="..\..\simgear\route\waypoint.cxx" />
     <ClCompile Include="..\..\simgear\scene\material\mipmap.cxx" />
+    <ClCompile Include="..\..\simgear\scene\model\ConditionNode.cxx" />
     <ClCompile Include="..\..\simgear\screen\extensions.cxx" />
     <ClCompile Include="..\..\simgear\screen\jpgfactory.cxx" />
     <ClCompile Include="..\..\simgear\screen\screen-dump.cxx" />
@@ -429,6 +430,7 @@
     <ClInclude Include="..\..\simgear\route\route.hxx" />
     <ClInclude Include="..\..\simgear\route\waypoint.hxx" />
     <ClInclude Include="..\..\simgear\scene\material\mipmap.hxx" />
+    <ClInclude Include="..\..\simgear\scene\model\ConditionNode.hxx" />
     <ClInclude Include="..\..\simgear\screen\colors.hxx" />
     <ClInclude Include="..\..\simgear\screen\extensions.hxx" />
     <ClInclude Include="..\..\simgear\screen\jpgfactory.hxx" />
